# SignalDeck

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  logger.py  pyproject.toml  requirements.txt  run_pipeline.py  setup.py  setup_airflow.sh
agent/: market_agent.py
api/: main.py  models.py
api/routers/: insights.py  news.py  signals.py  stocks.py
app/: dashboard.py
dags/: signaldeck_dag.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: catalyst_tracking.sql  company_performance.sql  schema.yml  volatility_analysis.sql
dbt/models/staging/: schema.yml  stg_fundamentals.sql  stg_news_articles.sql  stg_stock_prices.sql
features/: signal_engine.py
llm/: analysis_pipeline.py  insights.py
pipeline/: database.py  gcs_writer.py  ingest_fundamentals.py  ingest_news.py  ingest_social.py  ingest_stocks.py  sentiment.py  transform.py
tests/: test_signaldeck.py
